through translatewiki.net and are not listed here.

0.15.20 - 18 April 2010
  * Removed BoardVote and Click extensions
  * Updated AdvancedRandom, AjaxQueryPages, AjaxShowEditors, APC, ChangeAuthor,
    cldr, ConfirmAccount, CrossNamespaceLinks, EditCount, ImportUsers,
    Interwiki, Nuke, UsageStatistics and UserRightsNotif extensions

0.15.19 - 11 April 2010
  Updated Collection and FlaggedRevs extensions.

0.15.18 - 31 March 2010
  Fixed API module to work with current version of MediaWiki.

0.15.17 - 28 March 2010
  Fixed $wgDnsBlacklistUrls' type.

0.15.16 - 21 March 2010
  * Removed $wgUseMetadataEdit, $wgMetadataWhitelist and $wgCheckDBSchema
  * Added $wgGalleryOptions and $wgAllowUserCssPrefs

0.15.15 - 17 March 2010
  * Fixed scripts/findSettings.php to work with current version of MediaWiki.
  * Updated CodeReview, ContactPage, FlaggedRevs and SemanticMediaWiki
    extensions.

0.15.14 - 3 February 2010
  Updated CodeReview extension.

0.15.13 - 25 February 2010
  Removed support of UsernameBlacklist extension.

0.15.12 - 20 February 2010
  Added 'settings-file' option to $wgConfigureAdditionalExtensions.

0.15.11 - 19 February 2010
  * Added $wgFixArabicUnicode, $wgFixMalayalamUnicode, $wgDebugPrintHttpHeaders,
    $wgDebugTimestamps, $wgMemCachedTimeout, $wgBlockDisablesLogin,
    $wgAsyncHTTPTimeout and $wgSearchSuggestCacheExpiry
  * Removed $wgFixArchaicUnicode, $wgDebugSquid and $wgSquidResponseLimit

0.15.10 - 18 February 2010
  Added support for GroupsSidebar, QPoll, SendmailToWiki, TemplateInfo,
  Validator and Wikilog extensions.

0.15.9 - 17 February 2010
  Updated CentralAuth, CodeReview, ExternalData, FlaggedRevs, DynamicPageList,
  OggHandler, OpenID, SemanticForms and Translate extensions.

0.15.8 - 15 February 2010
  Added $wgConfigureDisabledExtensions to be able to disable some extensions.

0.15.7 - 14 February 2010
  Updated InspectCache, PurgeCache and Watchers extensions.

0.15.6 - 11 February 2010